[GUI][FIX] wrong color in menu

--- a/src/gui/style.css
+++ b/src/gui/style.css
@@ -1,7 +1,6 @@
 window
 {
     background-color: #313131;
-    color:white;
 }
 box
 {
